# tracr

./: .dockerignore  .gitignore  CITATION.cff  CONTRIBUTING.md  DIAGRAM.md  Dockerfile.base  Dockerfile.client  Dockerfile.edge  Dockerfile.observer  Dockerfile.participant  LICENSE  NOTES.md  README.md  app.py  connectivity.py  docker-compose.yaml  experiment_host.py  host.py  pyproject.toml  requirements-cu118.txt  requirements-cu121.txt  requirements-cu124.txt  requirements.observer.txt  requirements.participant.txt  requirements.txt  run.sh  server.py  test_onion_dataset_jetson.sh  tracr.sh  yolo_host.py  yolo_server.py
analysis/: analysis.py  constants.py  create.py  data_loader.py  faster_rcnn.py
analysis/plots/: base.py  comparative.py  energy.py  latency.py
config/: __init__.py  alexnetsplit.yaml  devices.yaml  devices_template.yaml  efficientnet_split.yaml  fasterrcnnsplit.yaml  mobilenetsplit.yaml  model_config.yaml  modelsplit_template.yaml  resnetsplit.yaml  vggsplit.yaml  yolosplit.yaml  yolov5split.yaml  yolov8split.yaml
config/test_cases/: alexnetsplit.yaml
experiments/: alexnet_experiment.py  base_experiment.py  template_experiment.py  yolo_experiment.py
scripts/: copy_repo_to_remote_device.sh  copy_results_to_server.sh  plot_layer_metrics.py  run_imagenet_alexnet.py  run_imagenet_alexnet.sh  run_imagenet_dataset.py  run_onion_dataset.py  run_onion_dataset.sh  run_onion_yolo.py  run_onion_yolo.sh  run_split_inference.py  run_split_onion_yolo.sh
scripts/full_inference/: run_imagenet_alexnet.py  run_imagenet_alexnet.sh
src/: __init__.py
src/api/: __init__.py  allocator.py  data_compression.py  device_mgmt.py  experiment_mgmt.py  inference_utils.py  log_manager.py  logger.py  master_dict.py  ml_utils.py  network_client.py  network_utils.py  power_monitor.py  remote_connection.py  runner.py  server.py  services_mgmt.py  ssh.py  tasks_mgmt.py  zero_deployment.py
src/api/core/: __init__.py  exceptions.py  log_manager.py
src/api/devices/: __init__.py  discovery.py  manager.py
src/api/experiments/: README.md  __init__.py  base.py  base_experiment.py  local.py  manager.py  networked.py  yolo_experiment.py
src/api/inference/: __init__.py  configs.py  factory.py  predictors.py  processors.py  visualizers.py
src/api/network/: __init__.py  client.py  compression.py  encryption.py  protocols.py  ssh.py
src/api/services/: base.py  split_inference.py  yolo_service.py
src/api/utils/: __init__.py  utils.py
src/experiment_design/: utils.py
src/experiment_design/datasets/: __init__.py  base.py  collate.py  collate_fns.py  custom.py  dataloader.py  imagenet.py  onion.py
src/experiment_design/datasets/core/: __init__.py  base.py  collate_fns.py  exceptions.py  loaders.py  transforms.py  utils.py
src/experiment_design/experiments/: alexnet_experiment.py  experiment_host.py  experiment_manager.py  template_experiment.py  yolo_experiment.py
src/experiment_design/models/: README.md  __init__.py  base.py  custom.py  hooks.py  model_hooked.py  power_monitor.py  registry.py  templates.py
src/experiment_design/models/core/: __init__.py  base.py  exceptions.py  registry.py  templates.py  utils.py
src/experiment_design/models/metrics/: __init__.py  base.py  collector.py  cpu.py  exceptions.py  factory.py  jetson.py  nvidia.py
src/experiment_design/partitioners/: iter_partitioner.py  linreg_partitioner.py  partitioner.py
src/interface/: __init__.py  bridge.py
src/tracr/: __init__.py
src/tracr/api/: master_dict.py  tasks_mgmt.py
src/tracr/app_api/: deploy.py  device_mgmt.py  experiment_mgmt.py  log_handling.py  master_dict.py  model_interface.py  server_script.py  tasks.py  utils.py
src/tracr/app_api/app_data/: known_devices_template.yaml
src/tracr/app_api/services/: base.py  basic_split_inference.py
src/tracr/experiment_design/datasets/: __init__.py  collate.py  custom.py  dataloader.py  dataset.py  imagenet.py  onion.py
src/tracr/experiment_design/models/: __init__.py  base.py  custom.py  model_configs.yaml  model_hooked.py  model_utils.py  templates.py
src/tracr/experiment_design/partitioners/: iter_partitioner.py  linreg_partitioner.py  (+1 more)
src/tracr/interface/: __init__.py
src/tracr/utils/: compression.py  experiment_utils.py  logger.py  network_utils.py  power_meter.py  ssh.py
src/utils/: __init__.py  compression.py  dependency_check.py  experiment_utils.py  file_manager.py  logger.py  ml_utils.py  network_utils.py  power_meter.py  split_experiment.py  ssh.py  system_utils.py  utilities.py
tests/: basic.py  conftest.py  model_test.yaml  test_alexnet_imagenet.py  test_connection.py  test_dataloader.py  test_onion_dataset_cuda.py
tests/app_api/: test_deploy.py  test_device_mgmt.py  test_experiment_mgmt.py  test_log_handling.py  test_master_dict.py  test_server_script.py  test_tasks.py  test_utils.py
tests/experiment_design/: test_datasets.py
tests/scripts/: __init__.py  bash_test.py  pytorch_test.py
tests/test_experiment_design/test_datasets/: test_imagenet.py  test_onion.py
tests/test_experiment_design/test_models/: __init__.py  test_hooks.py  test_integration.py  test_model_hooked.py
tests/toy_scripts/: bash_test.py  pytorch_test.py
utils/: copy_repo_to_remote_device.py  generate_imagenet_subsets.py
(+4 files in other folders)
