[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "tracr"
version = "0.1.0"
description = "A distributed neural network splitting framework"
readme = "README.md"
requires-python = ">=3.8"
authors = [
    { name = "Your Name", email = "your.email@example.com" }
]
# Core dependencies that are absolutely required
dependencies = [
    "tomli>=2.0.0",
    "paramiko>=3.5.0",
    "rpyc>=6.0.1",
    "loguru>=0.7.2",
    "blosc2>=2.7.1",
]

# Dependencies that should be already installed in user's environment
[project.optional-dependencies]
full = [
    "torch>=2.0.0",
    "torchvision",
    "torchaudio",
    "ultralytics>=8.3.28",
    "rich>=13.9.1",
    "black>=24.8.0",
    "torchinfo>=1.8.0"
]

[project.scripts]
tracr-server = "server:main"
tracr-client = "host:main"

[tool.hatch.build]
packages = ["src"]
include = [
    "server.py",
    "host.py"
]
exclude = [
    "data/",
    "tests/",
    "venv/",
    "logs/",
    "*.pyc",
    "__pycache__",
    "*.egg-info",
]

[tool.hatch.build.targets.wheel]
packages = ["src/"] 