[project]
name = "tracr"
version = "0.4.2"
description = "An experimental framework for computational offloading and distributed neural network inference through split computing"
readme = "README.md"
requires-python = ">=3.10"
authors = [
    { name = "Nick Bovee", email = "contact@nicholas.bov.ee"},
    { name = "Izhar Ali", email = "izharali.skt@gmail.com" },
]
dependencies = [
  "tomli>=2.0.0",
  "paramiko>=3.5.0",
  "rpyc>=6.0.1",
  "loguru>=0.7.2",
  "blosc2>=2.7.1",
  "torchinfo>=1.8.0",
  "rich>=13.9.1",
  "pyyaml>=6.0.2",
  "pandas>=2.2.3",
  "tqdm>=4.67.0",
]

[project.optional-dependencies]
cpu = [
  "torch>=2.5",
  "torchvision>=0.20",
  "torchaudio>=2.5",
]
cu118 =[
  "torch>=2.5",
  "torchvision>=0.20",
  "torchaudio>=2.5",
]

cu121 =[  
  "torch>=2.5",
  "torchvision>=0.20",
  "torchaudio>=2.5",
]
cu124 = [
  "torch>=2.5",
  "torchvision>=0.20",
  "torchaudio>=2.5",
]
full = [
  "ultralytics>=8.3.28",
]


[tool.uv]
conflicts = [
  [
    { extra = "cpu" },
    { extra = "cu118" },
    { extra = "cu121" },
    { extra = "cu124" },
  ],
]

[tool.ruff.lint]
ignore = ["F841"]

[dependency-groups]
dev = [
    "pytest>=8.3.5",
]

[tool.uv.sources]
torch = [
  { index = "pytorch-cpu", extra = "cpu", marker = "platform_system != 'Darwin'" },
  { index = "pytorch-cu118", extra = "cu118" },
  { index = "pytorch-cu121", extra = "cu121" },
  { index = "pytorch-cu124", extra = "cu124" },
]
torchvision = [
  { index = "pytorch-cpu", extra = "cpu", marker = "platform_system != 'Darwin'" },
  { index = "pytorch-cu118", extra = "cu118" },
  { index = "pytorch-cu121", extra = "cu121" },
  { index = "pytorch-cu124", extra = "cu124" },
]

torchaudio = [
  { index = "pytorch-cpu", extra = "cpu", marker = "platform_system != 'Darwin'" },
  { index = "pytorch-cu118", extra = "cu118" },
  { index = "pytorch-cu121", extra = "cu121" },
  { index = "pytorch-cu124", extra = "cu124" },
]

[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true

[[tool.uv.index]]
name = "pytorch-cu118"
url = "https://download.pytorch.org/whl/cu118"
explicit = true

[[tool.uv.index]]
name = "pytorch-cu121"
url = "https://download.pytorch.org/whl/cu121"
explicit = true

[[tool.uv.index]]
name = "pytorch-cu124"
url = "https://download.pytorch.org/whl/cu124"
explicit = true

[tool.ruff]
line-length = 88
indent-width = 4

# [build-system]
# requires = ["hatchling"]
# build-backend = "hatchling.build"

# [project.scripts]
# tracr-server = "server:main"
# tracr-client = "host:main"

# [tool.hatch.build]
# packages = ["src"]
# include = [
#     "server.py",
#     "host.py",
# ]
# exclude = [
#     "data/",
#     "tests/",
#     "venv/",
#     "logs/",
#     "*.pyc",
#     "__pycache__",
#     "*.egg-info",
# ]

# [tool.hatch.build.targets.wheel]
# packages = ["src/"] 
